# ai-research

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  TODO.md  docker-compose.yml  railway.toml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  start.sh
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: dependencies.py  router.py
backend/app/api/v1/endpoints/: __init__.py  chat.py  documents.py  research.py
backend/app/core/: config.py  logging.py
backend/app/models/: schemas.py
backend/app/services/: __init__.py  chat_service.py  document_service.py  research_service.py
backend/app/services/agents/: analysis_agent.py  base_agent.py  report_agent.py  search_agent.py  summary_agent.py  web_search_agent.py
backend/app/services/crew/: __init__.py  workflow.py
backend/app/services/rag/: __init__.py  embeddings.py  pdf_parser.py  rag_pipeline.py  vector_store.py
backend/app/utils/: openai_client.py  pdf_utils.py
backend/tests/integration/: test_api_endpoints.py
backend/tests/unit/: test_document_service.py  test_rag_pipeline.py  test_research_service.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: DashboardLayout.tsx
frontend/src/hooks/: useLocalStorage.ts
frontend/src/pages/: ChatPage.tsx  DashboardPage.tsx  DocumentsPage.tsx  ResearchPage.tsx  SettingsPage.tsx
frontend/src/services/: api.ts
frontend/src/styles/: tailwind.css
